--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -53,6 +53,15 @@
 								th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
 						</div>
 					</div>
+					
+					<div class="form-group row">
+					<label for="file" class="col-sm-2 col-form-label">Foto</label>
+				<div class="col-sm-6">
+					<input type="file" class="form-control" name="file"></input>
+					</div>
+					</div>
+					
+					
 					<div class="form-group row">
 						<div class="col-sm-6">
 							<input type="submit" value="Crear Cliente" class="btn btn-secondary" />
